WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
92414
[Chromium] IndexedDB: API stubs to simplify WebIDBCursor API
https://bugs.webkit.org/show_bug.cgi?id=92414
Summary
[Chromium] IndexedDB: API stubs to simplify WebIDBCursor API
Joshua Bell
Reported
2012-07-26 12:49:26 PDT
[Chromium] IndexedDB: API stubs to simplify WebIDBCursor API
Attachments
Patch
(2.97 KB, patch)
2012-07-26 12:52 PDT
,
Joshua Bell
no flags
Details
Formatted Diff
Diff
Patch
(3.00 KB, patch)
2012-07-26 15:04 PDT
,
Joshua Bell
no flags
Details
Formatted Diff
Diff
Patch for landing
(3.03 KB, patch)
2012-08-01 13:20 PDT
,
Joshua Bell
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Joshua Bell
Comment 1
2012-07-26 12:52:29 PDT
Created
attachment 154724
[details]
Patch
WebKit Review Bot
Comment 2
2012-07-26 12:55:25 PDT
Please wait for approval from
abarth@webkit.org
,
dglazkov@chromium.org
,
fishd@chromium.org
,
jamesr@chromium.org
or
tkent@chromium.org
before submitting, as this patch contains changes to the Chromium public API. See also
https://trac.webkit.org/wiki/ChromiumWebKitAPI
.
Joshua Bell
Comment 3
2012-07-26 12:59:35 PDT
Note that I will NOT be landing this until alecflett@'s in-progress index changes have landed, as they touch similar code. Full landing sequence is: (1) WebKit prep: Add new API stubs
http://webkit.org/b/92414
(this patch) (2) Chromium changes: dispatch to old and new API
https://chromiumcodereview.appspot.com/10830028
(3) WebKit changes: use the new API
http://webkit.org/b/92278
(4) Chromium cleanup: delete old API usage (5) WebKit changes: delete old API Wheee. Questions for reviewers: * Should I name the two IDBKey arguments? (key and primaryKey) * Instead of two new WebIDBCallback methods, onSuccess(cursor, key, primaryKey, value) - callback from openCursor(), and onSuccess(key, primaryKey, value) - callback from continue(), I could use the same method for both; passing along the cursor as a callback from continue() would be redundant but not harmful. dgrogan@, alecflett@ - please take a look
Joshua Bell
Comment 4
2012-07-26 15:04:04 PDT
Created
attachment 154759
[details]
Patch
David Grogan
Comment 5
2012-07-26 15:12:13 PDT
LGTM (In reply to
comment #3
)
> * Instead of two new WebIDBCallback methods, onSuccess(cursor, key, primaryKey, value) - callback from openCursor(), and onSuccess(key, primaryKey, value) - callback from continue(), I could use the same method for both; passing along the cursor as a callback from continue() would be redundant but not harmful.
I'd keep them separate but *shrug*.
Alec Flett
Comment 6
2012-07-26 16:51:40 PDT
+1 on separate - its hard enough to keep the various onSuccess's apart as it is :)
Joshua Bell
Comment 7
2012-07-30 16:27:14 PDT
abarth@, fishd@ or others - r? Note the "full landing sequence" comment for context.
Adam Barth
Comment 8
2012-07-30 16:34:10 PDT
> * Should I name the two IDBKey arguments? (key and primaryKey)
Yeah, generally if you have two arguments of the same type it's a good idea to give them names so folks can tell them apart.
Alec Flett
Comment 9
2012-07-31 10:53:03 PDT
FWIW, the bulk of my changes that should affect this have landed - I'm happy to have this bug sequence start to land and I'll sort through any leftover conflicts in
bug 91125
WebKit Review Bot
Comment 10
2012-08-01 12:43:36 PDT
Comment on
attachment 154759
[details]
Patch Rejecting
attachment 154759
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/WTF/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/13410492
Joshua Bell
Comment 11
2012-08-01 13:20:22 PDT
Created
attachment 155869
[details]
Patch for landing
WebKit Review Bot
Comment 12
2012-08-01 16:16:06 PDT
Comment on
attachment 155869
[details]
Patch for landing Clearing flags on attachment: 155869 Committed
r124382
: <
http://trac.webkit.org/changeset/124382
>
WebKit Review Bot
Comment 13
2012-08-01 16:16:11 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug