[Chromium] IndexedDB: API stubs to simplify WebIDBCursor API https://bugs.webkit.org/show_bug.cgi?id=92414

Reviewed by Adam Barth.

Prep work to unblock Chromium changes so that http://webkit.org/b/92278 can land.
Adds no-op methods which will later be implemented; during the landing sequence,
Chromium will call both the new methods and the old ones. The end goal is that
the success callbacks for cursors will include the new key/primaryKey/value rather
than requiring the callee to call back into the cursor backend to fetch them.

* public/WebIDBCallbacks.h:
(WebIDBCallbacks):
(WebKit::WebIDBCallbacks::onSuccess):


Canonical link: https://commits.webkit.org/110753@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124382 268f45cc-cd09-0410-ab3c-d52691b4dbfc